# realtime-gs

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
ara/: PAPER.md
benchmarks/: audit_beam_convergence_dynamics.py  audit_beam_covariance_refit.py  audit_beam_partition_covariance.py  audit_beam_partition_opacity_probe.py  audit_compact_initializer_suite.py  audit_geometric_arena_frame00008.py  audit_new_variants_frame00008.py  audit_pool_structure_wse_10k_frame00008.py  audit_pool_structure_wse_frame00008.py  beam_convergence_dynamics.py  beam_covariance_refit.py  beam_partition_covariance.py  beam_partition_opacity_probe.py  carve_merge_controls_ablation.py  compact_bounds_crossover.py  compact_init_eval.py  compact_masked_bundle_acquisition.py  compact_masked_bundle_recovery.py  compact_masked_lift_screen.py  compact_occupancy_refinement_factorial.py  compact_occupancy_scalar_ablation.py  compact_point_training.py  compact_responsibility_birth_allocation.py  compact_responsibility_birth_allocation_iter2.py  compact_responsibility_birth_allocation_iter3.py  compact_stage1_mask_screen.py  compact_teacher_capacity_crossover.py  cross_view_supervision_ablation.py  dense_confidence_gated_init_e2.py  dense_train_position_ablation.py  depth_anchor_ablation.py  depth_anchor_attribution.py  depth_covariance_ablation.py  full_compact_reconstruction.py  g2sr_correspondence_diagnostic.py  gaussianimage_plus_native_worker.py  gaussianimage_plus_provider_parity.py  geometric_arena_frame00008.py  inverse_projection_fiber_iter1e.py  inverse_projection_fiber_iter2.py  (+34 more)
docs/: ARCHITECTURE.md  BENCHMARKS.md  DESIGN_field_lift.md  EXPERIMENTS.md  RESEARCH.md  RESEARCH_LOOP.md  ROADMAP.md  TASK_COMPACT_PLACEMENT_CSR_ACCELERATION.md  TASK_DENSE_CONFIDENCE_GATED_INIT.md
scripts/: convert_datasets_to_gaussians2d.py  docs_sync.py  render_compact_structsplat_gallery.py  verify.sh  verify_iter1e_development_tree.py  write_iter1e_verification_receipt.py
(+682 files in other folders)
