[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rtgs"
version = "0.1.0"
description = "Fast 3D Gaussian Splatting via per-image 2D gaussian fitting and 2D-to-3D lifting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "torch>=2.2",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Fast CUDA rasterization backend (requires a CUDA toolchain / GPU).
cuda = ["gsplat>=1.4"]
# Feed-forward monocular depth backends (Depth Anything V2 via HuggingFace).
depth = ["transformers>=4.45"]
# Interactive browser viewer (Apache-2.0; imported lazily).
viewer = ["viser>=1.0.30,<2"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
rtgs = "rtgs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# JIT-compiled CUDA sources for the batched stage-1 renderer (rtgs.image2gs.cuda_backend)
# and the indexed observation-query backend (rtgs.core.observation2d_cuda).
"rtgs.image2gs.cuda" = ["*.cpp", "*.cu"]
"rtgs.core.cuda" = ["*.cpp", "*.cu"]
rtgs = ["_viewer_arcball.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "cuda: tests that require a CUDA GPU (deselected automatically when unavailable)",
    "slow: tests that take more than ~30s (excluded from the default CI run)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts", "benchmarks"]
# ruff 0.16 began formatting embedded code in Markdown; keep ruff scoped to Python source so
# `ruff format --check` does not churn docs and frozen benchmark/PREREG evidence artifacts.
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "SIM108", # ternary is not always clearer
    "B905",   # zip strict= churn on hot paths
]
